# aoc-2020

./: Cargo.toml
src/: cgol.rs  grid.rs  lib.rs
