[package]
name = "rust_2020"
version = "0.1.0"
authors = ["Alpvax <alpvax@netscape.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
fancy-regex = "0.4.0"
regex = "1.4.1" # fancy-regex does not support replacement!
lazy_static = "1.4.0"